<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:paddingLeft="24dp"
    android:paddingTop="200dp"
    android:paddingRight="24dp"
    tools:context=".LoginActivity">

    <!-- Login Title -->

    <!-- Username/Email Input -->

    <!-- Password Input -->

    <!-- Login Button -->

    <!-- Register TextView -->

    <EditText
        android:id="@+id/et_username_or_email"
        android:layout_width="284dp"
        android:layout_height="66dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/edittext_rounded"
        android:hint="@string/username_or_email"
        android:inputType="textPersonName|textEmailAddress"
        android:padding="16dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="112dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/login1"
        android:textColor="#9575CD"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="292dp"
        android:layout_height="56dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/edittext_rounded"
        android:hint="@string/password1"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="292dp"
        android:layout_height="79dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/button_rounded"
        android:padding="16dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/don_t_have_an_account_register_here"
        android:textColor="#3D5AFE"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>