<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:paddingTop="130dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    tools:context=".activity.AddCategoryActivity">

    <!-- Title for Adding Category -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_new_category"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>

    <!-- Category Input Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_white_background"
        android:orientation="vertical"
        android:padding="16dp"
        android:elevation="6dp">

        <!-- Input and Button Wrapper -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <!-- Category EditText -->
            <EditText
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_rounded"
                android:hint="@string/category"
                android:padding="16dp"
                android:textColor="@color/black" />

            <!-- Add Category Button -->
            <Button
                android:id="@+id/add_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_primary"
                android:text="@string/add_category"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:onClick="addCategory"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
