<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_color">

    <TextView
        android:id="@+id/add_expense_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/add_new_expense"
    android:textColor="@color/white"
    android:textSize="28sp"
    android:textStyle="bold"
    android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="20dp"
        android:clipToPadding="false"
        android:layout_below="@id/add_expense_title">  <!-- Set this line -->

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="number"
            android:hint="@string/amount"
            android:padding="12dp"
            android:background="@drawable/edittext_rounded"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray" />

        <Spinner
            android:id="@+id/expense_type"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_rounded"
            android:padding="12dp"
            android:popupBackground="@color/white"
            android:spinnerMode="dropdown"
            android:entries="@array/expense_types" />

        <Button
            android:id="@+id/add_expense"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded"
            android:text="@string/add_expense"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:padding="12dp" />
    </LinearLayout>
</RelativeLayout>
